# interview_chatbot

./: .gitignore  Makefile  README.md  llm_calls.jsonl  pyproject.toml  requirements.txt  validate.py
artifacts/: answers.json  chunking_comparison.json  chunks.json  eval.json  grounding_check.json  retrieval.json
kb/: article_01.txt  article_02.txt  article_03.txt  article_04.txt
src/: api.py  index.html  pipeline.py
