[project]
name = "interview-chatbot"
version = "0.1.0"
description = "Replayable mini-RAG pipeline and dashboard"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "requests>=2.31.0"
]

[tool.vercel]
entrypoint = "src.api:app"
